fixed invisible titles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,10 @@ title {
   font-weight: 800;
 }
 
+.ce-header {
+  color: #000;
+}
+
 .uxui {
   background-color: #635680;
 }
